fix background color on mobile + fix displaying events for current_day and tomorrow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,17 +10,6 @@
 
 /* Overwrite css here */
 
-/** 
-* dark mode
-*/
-body.dark {
-    --bg-color: #000;
-    --bg-secondary-color: #131316;
-    --font-color: #f5f5f5;
-    --color-grey: #ccc;
-    --color-darkGrey: #777;
-}
-
 /**
 * Topbar
 */
